<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MaxTryActivity"
    android:id="@+id/parent"
    android:background="@color/primary"
    >

    <RelativeLayout
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:menu="@menu/top_menues"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="@dimen/emp_home_app_logo_size"
                        android:layout_height="@dimen/emp_home_app_logo_size"

                        android:layout_marginStart="@dimen/emp_home_margin_h"
                        android:src="@drawable/ic_logo_icon" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/emp_home_profile_pic"
                        android:layout_height="@dimen/emp_home_profile_pic"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/emp_home_margin_r_h"
                        app:cardCornerRadius="@dimen/home_profile_round_radius"
                        app:cardBackgroundColor="@color/white"
                        >
                        <ImageView
                            android:id="@+id/profilePicture"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            />
                    </androidx.cardview.widget.CardView>

                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/siteNameheader"
        android:layout_below="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">
        <TextView
            android:id="@+id/siteTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/mainContainer"
        android:layout_below="@+id/siteNameheader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_round_background"
        android:elevation="@dimen/home_container_round_elevation"
        >
        <TextView
            android:id="@+id/timeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/emp_home_time_text"
            android:layout_marginTop="@dimen/emp_home_time_top"
            android:textColor="@color/grey"
            />

        <RelativeLayout
            android:layout_below="@+id/timeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="20dp"

            >

            <TextView
                android:id="@+id/warnText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/mx_try_warn"
                android:textAlignment="center"

                android:layout_centerHorizontal="true"
                />



            <TextView
                android:id="@+id/mgsText"
                android:layout_below="@id/warnText"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/mx_try_work_mgs"
                android:layout_centerHorizontal="true"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sendMsg"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/mgsText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_button_height"
                android:text="@string/mx_try_button"
                android:textSize="@dimen/re_att_capture_text"
                android:backgroundTint="@color/white"

                android:textColor="@color/primary"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:strokeWidth="1dp"
                app:strokeColor="@color/primary"
                app:cornerRadius="@dimen/login_button_corner"

                />

            <ImageView
                android:id="@+id/mgsSendImage"
                android:layout_below="@+id/sendMsg"
                android:layout_marginTop="30dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_send_message_to_supervisor"
                />
        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>